# meshcore_companion_rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: add_update_contact.rs  delete_contact.rs  export_contact_remote.rs  export_contact_self.rs  reset_path.rs  room_server_message.rs  send_channel_message.rs  send_direct_message.rs  send_self_advert.rs  set_advert_name.rs  set_advert_name_latlon.rs  set_radio_params.rs  share_contact.rs
src/: commands.rs  consts.rs  contact_mgmt.rs  lib.rs  main.rs  push_events.rs  responses.rs  serial_actor.rs  tests.rs
