[package]
name = "meshcore_companion_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "companion_test"
path = "src/main.rs"

[dependencies]
serialport = "4.8.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2.0.17"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
console-subscriber = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }