[package]
name = "meshcore_companion_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.8.1"
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread", "macros", "sync", "time", "tracing"] }
thiserror = "2.0.18"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
console-subscriber = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
